# KOLOK-ZADACI

./: CMakeLists.txt  main.cpp  zadaca_1.cpp  zadaca_10.cpp  zadaca_11.cpp  zadaca_12.cpp  zadaca_13.cpp  zadaca_15.cpp  zadaca_17.cpp  zadaca_3.cpp  zadaca_4.cpp  zadaca_5.cpp  zadaca_6.cpp  zadaca_7.cpp  zadaca_8.cpp  zadaca_9.cpp
