cmake_minimum_required(VERSION 3.24)
project(zadaca_za_2_kolok)

set(CMAKE_CXX_STANDARD 17)

add_executable(zadaca_za_2_kolok main.cpp)
add_executable(zadaca_1 zadaca_1.cpp)
add_executable(zadaca_6 zadaca_6.cpp)
add_executable(zadaca_3 zadaca_3.cpp)
add_executable(zadaca_4 zadaca_4.cpp)
add_executable(zadaca_5 zadaca_5.cpp)
add_executable(zadaca_7 zadaca_7.cpp)
add_executable(zadaca_8 zadaca_8.cpp)
add_executable(zadaca_9 zadaca_9.cpp)
add_executable(zadaca_10 zadaca_10.cpp)
add_executable(zadaca_11 zadaca_11.cpp)
add_executable(zadaca_17 zadaca_17.cpp)
add_executable(zadaca_12 zadaca_12.cpp)
add_executable(zadaca_15 zadaca_15.cpp)
add_executable(zadaca_13 zadaca_13.cpp)








